# real-world-haskell

./: CHANGELOG.md  README.md  _typos.toml  real-world-haskell.cabal  stack.yaml
src/Text/: PrettyShow.hs
src/Text/Parsec/: Form.hs  JSON.hs
test/Text/: PrettyShowSpec.hs
test/Text/Parsec/: FormSpec.hs  JSONSpec.hs
