cabal-version:       2.2

name:                real-world-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/doitian/real-world-haskell#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Text.PrettyShow
                     , Text.Parsec.Form
                     , Text.Parsec.JSON
  build-depends:       base >= 4.7 && < 5
                     , dlist
                     , parsec
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable real-world-haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , real-world-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite real-world-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Text.PrettyShowSpec
                     , Text.Parsec.FormSpec
                     , Text.Parsec.JSONSpec
  build-depends:       base
                     , real-world-haskell
                     , hspec
                     , QuickCheck
                     , parsec
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/doitian/real-world-haskell
